feat: remove hotel references from room-related entities and update availability methods